--- a/css/style.css
+++ b/css/style.css
@@ -807,6 +807,7 @@ body {
 }
 
 .slide-button-controls {
+    position: relative;
     display: block;
     width: 10px;
     height: 10px;
@@ -902,7 +903,7 @@ body {
     display: none;
 }
 
-.slide-item:nth-child(1) {
+.slide-item.current-slide {
     display: block;
 }
 
@@ -1365,7 +1366,7 @@ body {
     display: none;
 }
 
-.services-block:nth-of-type(1) {
+.services-block.srv-active-slide {
     display: block;
 }
 
@@ -2288,8 +2289,8 @@ body {
 
 .catalog-popup-row-1 {
     min-height: 163px;
-    display: flex;
-    justify-content: center;
+    box-sizing: border-box;
+    padding-top: 48px;
 }
 
 .catalog-popup-row-1 p {
@@ -2337,4 +2338,8 @@ body {
 
 .popup-hide {
     display: none;
+}
+
+.form-shake{
+    
 }
